--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,27 @@
 @import "tailwindcss";
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/Poppins-Regular.woff2") format("woff2"),
+       url("/fonts/Poppins-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url("/fonts/Lexend-Regular.ttf") format("truetype");
+}
+
+/* Declare theme font variables */
+@theme {
+ 
+    --font-poppins: "Poppins", sans-serif;
+    --font-lexend:"Lexend", sans-serif;
+}
+    body {
+      font-family: 'Inter', sans-serif;
+    }
